# someexp

./: .gitignore  README.md  pyproject.toml  run-jupyter-lab.sh  run-tfboard.sh  utils.py
bipartite_recon/: README.md  bipartite_recon.ipynb
partial_diff/: README.md  create_synthetic_data.ipynb
