[tool.poetry]
name = "kaggle-competition"
version = "0.1.0"
description = ""
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.8"
black = "^22.3.0"
isort = "^5.10.1"
yapf = "^0.32.0"
scipy = "^1.7"
pandas = "^1"
numpy = "^1"
matplotlib = "^3.5.1"
joblib = "^1.1.0"
scikit-learn = "^1.0.2"
xgboost = "^1.5.2"
loguru = "^0.6.0"
optuna = ">=3"
tqdm = "^4.64.0"
toml = "^0.10.2"
tensorflow = "^2.10.0"
PyMySQL = "^1.0.2"
seaborn = "^0.11.2"
tensorflow-ranking = "^0.5.0"
tensorflow-datasets = "^4.5.2"
more-itertools = "^8.13.0"
pydantic = "^1.9.0"
pyarrow = "^8.0.0"
swifter = "^1.3.4"
pydot = "^1.4.2"
kaggle = "^1.5.12"
memory-profiler = "^0.60.0"
typing-extensions = "^4.4.0"
nltk = "^3.8.1"
SQLAlchemy = "<2"
configparser = "^5.3.0"
mysqlclient = "^2.1.1"
plotly = "^5.13.0"
xeus-python = "^0.15.2"
textract = "^1.6.5"
install = "^1.3.5"
ipympl = "^0.9.3"
nodejs = "^0.1.1"
ipyvolume = "^0.6.1"
ipywidgets = "~=7.7"
jupyterlab-widgets = "1.1.1"
jupyterlab = "^3.6.1"
polars = "^0.16.9"
ucimlrepo = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
